2004-04-22  Theodore A. Roth  <troth@openavr.org>

	[This fixes bug #8649.]
	* NEWS: Add note about this bug fix.
	* include/avr/sfr_defs.h (bit_is_set): Wrap sfr arg with _SFR_BYTE().
	(bit_is_clear): Ditto.

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/sfr_defs.h: Move _SFR_BYTE() and _SFR_WORD() #defines to
	be before first usage.

2004-04-20  Theodore A. Roth  <troth@openavr.org>
[Contributed by LAL@pro.onet.pl]

	[This closes patch #2651]
	* include/avr/iom169.h: Change SIG_UART0_RECV to SIG_USART_RECV.
	Change SIG_UART0_DATA to SIG_USART_DATA.
	Change SIG_UART0_TRANS to SIG_USART_TRANS.
	Provide defines from old to new names to avoid breaking existing code.

2004-04-20  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	[This change should fix bug #8391]
	* NEWS: Add note about this bug fix.
	* include/avr/boot.h (__BOOT_LOCK_BITS_MASK): Remove.
	(__boot_lock_bits_set): Use the compliment of lock_bits arg so the user
	specifies only which bits are to be set. NOTE that this changes the
	usage but the previous usage was confusing and not well documented.
	(__boot_lock_bits_set_alternate): Ditto.
	(boot_lock_bits_set): Improve documentation.

2004-04-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
[Contributed by adebeun@enatel.net]

	* NEWS: note the bug fix.
	* include/avr/wdt.h: fix _wdt_write() for the ATmega169,
	closes bug #8119.

2004-04-16  Theodore A. Roth  <troth@openavr.org>
[Contributed by Wolfgang Haidinger <wh@vmars.tuwien.ac.at>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Add note about new pgmspaces macros.
	* include/avr/pgmspace.h: Extend API to allow access of 32 bit
	unsigned double words.

2004-04-14  Theodore A. Roth  <troth@openavr.org>

	* NEWS: Make a note of this bug fix.
	* include/avr/iom169.h: Update copyright year.
	Fixes for bug #8452.
	(OCR1A): Fix register name.
	(OCR1B): Ditto.
	(UCSRA): Ditto.
	(UCSRB): Ditto.
	(UCSRC): Ditto.
	(UBRR): Ditto.
	(UDR): Ditto.