@@ -33,6 +33,12 @@
 #  define OC1 PD5
 #  define DDROC DDRD
 #  define OCR OCR1A
+#elif defined(__AVR_ATmega64__) || defined(__AVR_ATmega128__)
+#  define OC1 PB5
+#  define DDROC DDRB
+#  define OCR OCR1A
+#  define PWM10 WGM10
+#  define PWM11 WGM11
 #else
 #  error "Don't know what kind of MCU you are compiling for"
 #endif
