@@ -1,3 +1,7 @@
+2004-04-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* doc/examples/demo.c: Update for ATmega{64,128}
+
 2004-04-22  Theodore A. Roth  <troth@openavr.org>
 
 	[This fixes bug #8649.]
